[package]
name = "rtc-ice"
version = "0.2.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "RTC ICE in Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rtc-ice"
homepage = "https://ortc.rs"
repository = "https://github.com/webrtc-rs/ortc/tree/master/rtc-ice"

[dependencies]
shared = { version = "0.2.0", path = "../rtc-shared", package = "rtc-shared", default-features = false, features = [] }
stun = { version = "0.2.0", path = "../rtc-stun", package = "rtc-stun" }

crc = "3.2.1"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
url = "2.5.4"
bytes = "1.9.0"
anyhow = { version = "1.0", features = ["backtrace"] }


[dev-dependencies]
regex = "1.11.1"
env_logger = "0.11.5"
chrono = "0.4.39"
ipnet = "2.10.1"
clap = { version = "4.5.23", features = ["derive"] }
lazy_static = "1.5.0"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

sha1 = "0.10.6"
waitgroup = "0.1.2"
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
ctrlc = "3.4"

[[example]]
name = "ping_pong"
path = "examples/ping_pong.rs"
bench = false
